--- a/package.json
+++ b/package.json
@@ -17,30 +17,30 @@
     "@react-native-firebase/auth": "^17.5.0",
     "@react-native-firebase/functions": "^17.5.0",
     "@react-native-firebase/storage": "^17.5.0",
-    "@react-native-picker/picker": "^2.7.5",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
-    "expo": "~51.0.31",
-    "expo-dev-client": "~4.0.26",
-    "expo-device": "~6.0.2",
-    "expo-image-picker": "~15.0.7",
-    "expo-location": "~17.0.1",
-    "expo-notifications": "~0.28.16",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.11",
+    "expo-dev-client": "~5.0.4",
+    "expo-device": "~7.0.1",
+    "expo-image-picker": "~16.0.3",
+    "expo-location": "~18.0.2",
+    "expo-notifications": "~0.29.8",
+    "expo-status-bar": "~2.0.0",
     "firebase": "^10.11.1",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.1",
     "geofire-common": "^6.0.0",
     "native-notify": "^4.0.4",
     "pullstate": "^1.25.0",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "18.3.1",
+    "react-native": "0.76.3",
     "react-native-elements": "^3.4.3",
     "react-native-geocoding": "^0.5.0",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.18.0",
@@ -50,9 +50,9 @@
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.1.3",
     "react-native-qrcode-svg": "^6.3.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.1.0"
   },
